--- a/index.html
+++ b/index.html
@@ -8,5 +8,42 @@
     <title>Nike Sneakers</title>
 </head>
 <body>
-    
+    <div class="heading">
+        <div class="nav">
+            <div class="spacing">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <img src="logo.png" alt="" class="logo">
+            <button class="mode-switch" title="Switch Theme">
+                <svg class="moon" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                    stroke-width="2" width="36" height="36" viewBox="0 0 24 24">
+                    <defs></defs>
+                    <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="box" id="box1">
+                <h2 class="name">Nike Air Max 97</h2>
+                <a href="#" class="buy">Buy Now</a>
+                <div class="circle"></div>
+                <img class="product" src="./assets/yellow.png" />
+            </div>
+            <div class="box" id="box2">
+                <h2 class="name">Nike Air Max 97</h2>
+                <a href="#" class="buy">Buy Now</a>
+                <div class="circle"></div>
+                <img class="product" src="./assets/white.png" />
+            </div>
+            <div class="box" id="box3">
+                <h2 class="name">Nike Air Max 97</h2>
+                <a href="#" class="buy">Buy Now</a>
+                <div class="circle"></div>
+                <img class="product" src="./assets/grey.png" />
+            </div>
+        </div>
 </body>
