--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div></div>
                 <div></div>
             </div>
-            <img src="logo.png" alt="" class="logo">
+            <img src="./assets/logo.png" alt="" class="logo">
             <button class="mode-switch" title="Switch Theme">
                 <svg class="moon" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                     stroke-width="2" width="36" height="36" viewBox="0 0 24 24">
