Completed HTML and CSS

--- a/index.html
+++ b/index.html
@@ -25,25 +25,29 @@
             </button>
         </div>
     </div>
+    <section class="description">
+        <h1>NIKE AIR MAX 97</h1>
+        <h3>Elevate Your Style with Iconic Innovation. Experience the classic design and unparalleled comfort of the Nike AIR Max 97. <strong>Grab yourself a pair of sneakers.</strong></h3>
+    </section>
     <div class="wrapper">
         <div class="container">
             <div class="box" id="box1">
-                <h2 class="name">Nike Air Max 97</h2>
+                <h2 class="name">MRP: &#x20B9;16 995.00</h2>
                 <a href="#" class="buy">Buy Now</a>
                 <div class="circle"></div>
                 <img class="product" src="./assets/yellow.png" />
             </div>
             <div class="box" id="box2">
-                <h2 class="name">Nike Air Max 97</h2>
+                <h2 class="name">MRP: &#x20B9;17 495.00</h2>
                 <a href="#" class="buy">Buy Now</a>
                 <div class="circle"></div>
                 <img class="product" src="./assets/white.png" />
             </div>
             <div class="box" id="box3">
-                <h2 class="name">Nike Air Max 97</h2>
+                <h2 class="name">MRP: &#x20B9;17 495.00</h2>
                 <a href="#" class="buy">Buy Now</a>
                 <div class="circle"></div>
-                <img class="product" src="./assets/grey.png" />
+                <img class="product" id="product3" src="./assets/grey.png" />
             </div>
         </div>
 </body>
