Dark mode added

--- a/index.html
+++ b/index.html
@@ -50,4 +50,8 @@
                 <img class="product" id="product3" src="./assets/grey.png" />
             </div>
         </div>
+    <script src="./script.js"></script>
+    <script>
+        
+    </script>
 </body>
